--- a/grid-1/src/App.css
+++ b/grid-1/src/App.css
@@ -1,19 +1,23 @@
 .app-wrapper {
+    margin: 0 auto;
+    width: 1200px;
 
-  margin: 0 auto;
-  width: 1200px;
+    display: grid;
+    grid-template-areas: "h h" "n c";
 
-  display: grid;
-  grid-template-areas:
-  "h h"
-  "n c";
-
-   grid-template-rows: 60px 1fr;
-   grid-template-columns: 2fr 10fr;
+    grid-template-rows: 60px 1fr;
+    grid-template-columns: 2fr 10fr;
     /* grid-gap: 10px; */
-
 }
 
+.app-wrapper-content {
+    grid-area: c;
+    background-color: lightgray;
+}
+
+.app-wrapper-content img {
+    width: 400px;
+}
 
 
 
