--- a/grid-1/src/components/Navbar/Navbar.module.css
+++ b/grid-1/src/components/Navbar/Navbar.module.css
@@ -11,3 +11,17 @@
 .item a.active{
     color: gold;
 }
+
+.friends{
+    color: white;
+}
+.friends img{
+    width: 50px;
+    height: 50px;
+    border-radius: 30px;
+}
+.friendsElements {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+}
