--- a/grid-1/src/components/Header/Header.module.css
+++ b/grid-1/src/components/Header/Header.module.css
@@ -6,3 +6,12 @@
 .header img {
     width: 50px;
 }
+
+.loginBlock{
+    float: right;
+    color: white;
+}
+.loginBlock a{
+    color: white;
+    text-decoration: none;
+}
