--- a/grid-1/src/components/common/FormsControls/FormsControls.module.css
+++ b/grid-1/src/components/common/FormsControls/FormsControls.module.css
@@ -5,5 +5,10 @@
 }
 
 .formControl.error span{
-    color: red
+    color: red;
+}
+.formSummaryError{
+    border: 2px solid red;
+    color: red;
+    padding: 3px;
 }
